<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- activity_login -->
    <string name="activity_login_logo_content_description">Seguro Integral de Salud</string>
    <string name="activity_login_btn_login_text">Ingresar</string>
    <string name="activity_login_username_hint">Usuario</string>
    <string name="activity_login_password_hint">Constraseña</string>
    <!---->
    
    <!-- Messages -->
    <string name="msg_no_internet_connection">No es posible ingresar al sistema. Por favor, verifique su conexión a internet o intente más tarde.</string>
    <string name="msg_please_wait">Por favor, espere &#8230;</string>
    <string name="msg_canceled_by_user">El proceso ha sido cancelado por el usuario.</string>
    <string name="msg_login_user_password_invalid">El usuario y contraseña no son válidos.</string>
    <string name="msg_login_failed">No se puede ingresar al sistema, intente más tarde.</string>
    <string name="msg_login_succeeded">Ingreso correcto.</string>
    <string name="msg_send_encuesta_succeeded">La encuesta ha sido enviada exitosamente.</string>
    <string name="msg_send_encuesta_failed">Hubo un error al enviar la encuesta. Se ha almacenado en la base de datos del dispositivo.</string>
    <string name="msg_download_opciones_respuesta_failed">Ocurrió un error en la descarga de opciones de respuesta.</string>
    <string name="msg_download_asignaciones_failed">Ocurrió un error en la descarga de asignaciones.</string>
    <string name="msg_login_no_config_registered">Debe configurar la conexión antes de realizar el login.</string>
    <!---->
    
    <!-- Options -->
    <string name="answer_yes">Si</string>
    <string name="answer_no">No</string>
    <string name="answer_in_eess">Dentro del EESS</string>
    <string name="answer_out_eess">Fuera del EESS</string>
    <string name="answer_both_eess">Ambos</string>
    <string name="answer_enter_tickets">No se han ingresado boletas.</string>
    <string name="answer_no_selection">Ninguno seleccionado.</string>
    <string name="answer_amount">0.0</string>
    <!---->
    
    <!-- Questions -->
    <string name="question_7">Servicio requerido</string>
    <string name="question_8">¿Realizo algun pago?</string>
    <string name="question_9">¿Cuenta con boletas?</string>
    <string name="question_10">¿Donde realizo los pagos?</string>
    <string name="question_11">¿Porque pago fuera del EESS?</string>
    <string name="question_12">Boletas entregadas en EESS</string>
    <string name="question_13">Monto pagado en EESS (S/.)</string>
    <string name="question_14">¿Porque pago dentro del EESS?</string>
    <string name="question_15">¿Es cobro indebido?</string>
    <string name="question_16">¿Donde le indicaron que pagara?</string>
    <string name="question_17">¿Quien le indicó que debía pagar?</string>
    <string name="question_18">¿Se realizó la devolución?</string>
    <string name="question_19">¿Quién contribuyó a la solución del caso?</string>
    <string name="question_20">¿Desea formalizar su reclamo?</string>
    <!---->
    
    <!-- dialogs -->
    <string name="title_save_encta">Guardar Encuesta</string>
    <string name="title_send_encta">Enviando Encuesta</string>
    <string name="please_wait">Espere un poco, por favor.</string>
    <!---->
    
    <!-- Main Menu Options titles -->
    <string-array name="main_menu_titles">
        <item>Iniciar jornada</item>
        <item>Finalizar jornada</item>
        <item>Sincronización</item>
    </string-array>
    <string-array name="main_menu_desc">
        <item>Seleccione ésta opción comenzar el día.</item>
        <item>Seleccione ésta opción para finalizar las actividades del día.</item>
        <item>Envío de encuestas pendientes, Descargar parámetros, etc.</item>
    </string-array>
    <string-array name="main_menu_stored_enscts">
        <item>Todas</item>
        <item>Enviadas</item>
        <item>No Enviadas</item>
    </string-array>
    <string-array name="main_menu_sync">
        <item>Descargar parámetros</item>
        <item>Reenviar encuestas almacenadas</item>
    </string-array>
    
    <string-array name="main_menu_values">
        <item>gob.sis.simos.BeginWorkingDayActivity</item>
        <item>gob.sis.simos.EndWorkingDayActivity</item>
        <item>gob.sis.simos.SyncMenuActivity</item>
    </string-array>
    <!--  -->
    
    <!-- Button Text -->
    <string name="btn_text_OK">Aceptar</string>
    <!---->
    
    <!-- titles -->
    <string name="app_name">simos</string>
    <string name="action_settings">Settings</string>
    <string name="main_menu">Menú principal</string>
    
    <string name="title_section1">Medicamentos</string>
    <string name="title_section2">Insumos</string>
    
    <string name="inquests_all">TODO</string>
    <string name="inquests_sent">ENVIADOS</string>
    <string name="inquests_unsent">NO ENVIADOS</string>
    <!--  -->
    
    
    
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_anexo01">Anexo01Activity</string>
    <string name="title_activity_annx02">Annx02Activity</string>

    
    <string-array name="array_services">
        <item>Consulta</item>
        <item>Medicamentos</item>
		<item>Insumos</item>
		<item>Examenes auxiliares</item>
		<item>Procedimientos de apoyo al diagnóstico</item>
		<item>Traslado de emergencia</item>
		<item>Alimentación (En caso de traslados por emergencia)</item>
		<item>Tomografía</item>
		<item>Procedimientos especiales</item>
		<item>Resonancia magnética</item>
		<item>Otros</item>
    </string-array>
    
    <string name="country_prompt">Choose a country</string>
    <string-array name="country_arrays">
        <item>Seleccione un elemento</item>
        <item>Elemento 1</item>
        <item>Elemento 2</item>
        <item>Elemento 3</item>
        <item>Elemento 4</item>
    </string-array>
 
    <string name="entrega_prompt">Seleccione tipo de entrega</string>
    <string-array name="entrega_arrays">
        <item>Totalmente</item>
        <item>Parcialmente</item>
        <item>No entregado</item>
    </string-array>
    
    <string name="receta_prompt">Seleccione tipo de entrega</string>
    <string-array name="receta_arrays">
        <item>Comercial</item>
        <item>Genérico</item>
    </string-array>
</resources>