<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
	    xmlns:tools="http://schemas.android.com/tools"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    tools:context=".LoginActivity" style="@style/login_activity_style">
    
    <LinearLayout
        android:id="@+id/rootLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">
        
        <ImageView
	        android:id="@+id/imageView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:contentDescription="@string/activity_login_logo_content_description"
	        android:src="@drawable/sis" />
        <EditText
	        android:id="@+id/username"
	        style="@style/edittext"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:background="@drawable/rounded_user_edittext"
	        android:singleLine="true"
	        android:layout_marginTop="10dp"
	        android:ems="10"
	        android:hint="@string/activity_login_username_hint" />
        <EditText
	        android:id="@+id/password"
	        android:hint="@string/activity_login_password_hint"
	        style="@style/edittext"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:layout_marginTop="1dp"
	        android:singleLine="true"
	        android:background="@drawable/rounded_password_edittext"
	        android:ems="10"
	        android:inputType="textPassword"/>
        <Button
	        android:id="@+id/btnLogin"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:layout_marginTop="24dp"
	        android:text="@string/activity_login_btn_login_text"
	        android:background="@drawable/rounded_login_button"/>
    </LinearLayout>
</ScrollView>