<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/gob.sis.simos"
    android:id="@+id/frmgnt_vrfccn_pgs_02"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_rectangle_section"
    android:orientation="vertical" >
    
    <!-- Pregunta 16 -->
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="#F2F2F2"/>
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:layout_marginLeft="10dp"
                android:text="@string/question_16"/>
            <gob.sis.simos.ui.UISpinner
                android:id="@+id/spinner_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:preguntaId="16"
                app:preguntaParentId="7"/>
        </LinearLayout>
        
        <!-- Pregunta 17 -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="#F2F2F2"/>
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:layout_marginLeft="10dp"
               android:text="@string/question_17"/>
            <gob.sis.simos.ui.UISpinner
                android:id="@+id/spinner_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:preguntaId="17"
                app:preguntaParentId="7"/>
        </LinearLayout>
        
        <!-- Pregunta 18 -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="#F2F2F2"/>
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:layout_marginLeft="10dp"
                android:layout_weight="0.5"
                android:text="@string/question_18"/>
            <gob.sis.simos.ui.UIRadioGroup
                	android:id="@+id/rg_devolucion"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:layout_marginRight="10dp"
                    android:gravity="right"
                    android:orientation="horizontal"
                    app:preguntaId="18"
                    app:preguntaParentId="7">
                <gob.sis.simos.ui.UIRadioButton
                    android:text="@string/answer_yes"
                    android:layout_width="wrap_content"
                    app:preguntaId="18"
                    app:preguntaParentId="7"
                    app:opcionRespuestaId="107" />
                <View android:layout_width="1dp"
			            android:layout_height="match_parent"
			            android:layout_marginLeft="10dp"
			            android:layout_marginRight="2dp"
			            android:background="#F2F2F2"/>
                <gob.sis.simos.ui.UIRadioButton 
                    android:text="@string/answer_no" 
                    android:layout_width="wrap_content"
                    app:preguntaId="18" 
                    app:preguntaParentId="7"
                    app:opcionRespuestaId="108"/>
            </gob.sis.simos.ui.UIRadioGroup>
        </LinearLayout>
        
        <!-- Pregunta 19 -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="#F2F2F2"/>
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:layout_marginLeft="10dp"
               android:text="@string/question_19"/>
            <gob.sis.simos.ui.UISpinner
                android:id="@+id/spinner_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:preguntaId="19"
                app:preguntaParentId="7"/>
        </LinearLayout>
        
        <!-- Pregunta 20 -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="#F2F2F2"/>
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:layout_marginLeft="10dp"
                android:layout_weight="0.5"
                android:gravity="center_vertical"
                android:text="@string/question_20"/>
            <gob.sis.simos.ui.UIRadioGroup 
                android:id="@+id/rg_formalizar_reclamo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="0.5"
                    android:gravity="right"
                    android:orientation="horizontal"
                    app:preguntaId="20"
                    app:preguntaParentId="7">
                <gob.sis.simos.ui.UIRadioButton 
                    android:text="@string/answer_yes" 
                    android:layout_height="wrap_content"
                    app:preguntaId="20"
                    app:preguntaParentId="7"
                    app:opcionRespuestaId="97"/>
                <View android:layout_width="1dp"
			            android:layout_height="match_parent"
			            android:layout_marginLeft="10dp"
			            android:layout_marginRight="2dp"
			            android:background="#F2F2F2"/>
                <gob.sis.simos.ui.UIRadioButton 
                    android:text="@string/answer_no"  
                    android:layout_height="wrap_content"
                    app:preguntaId="20"
                    app:preguntaParentId="7"
                    app:opcionRespuestaId="98"/>
            </gob.sis.simos.ui.UIRadioGroup>
        </LinearLayout>
        
    </LinearLayout>
</ScrollView>
